# DArray

./: .gitignore  CMakeLists.txt  Doxyfile
src/: CMakeLists.txt
src/darray/: CMakeLists.txt
src/darray/include/darray/: darray.h
src/darray/src/: darray.c  main.c
src/darray/tests/: CMakeLists.txt  test_darray.c
